@@ -1,10 +1,12 @@
 "Test , coverage 17%."
 
-from idlelib import iomenu, util
+from idlelib import iomenu
 import unittest
 from test.support import requires
 from tkinter import Tk
 from idlelib.editor import EditorWindow
+from idlelib import util
+from idlelib.idle_test.mock_idle import Func
 
 
 class IOBindingTest(unittest.TestCase):
@@ -36,9 +38,14 @@ class IOBindingTest(unittest.TestCase):
         io = self.io
         fix = io.fixnewlines
         text = io.editwin.text
+
+        # Make the editor temporarily look like Shell.
         self.editwin.interp = None
-        eq(fix(), '')
-        del self.editwin.interp
+        shelltext = '>>> if 1'
+        self.editwin.get_prompt_text = Func(result=shelltext)
+        eq(fix(), shelltext)  # Get... call and '\n' not added.
+        del self.editwin.interp, self.editwin.get_prompt_text
+
         text.insert(1.0, 'a')
         eq(fix(), 'a'+io.eol_convention)
         eq(text.get('1.0', 'end-1c'), 'a\n')
