@@ -4,6 +4,8 @@ Released 2023-04-03?
 =========================
 
 
+gh-95191: Include prompts when saving Shell (interactive input/output).
+
 gh-95511: Fix the Shell context menu copy-with-prompts bug of copying
 an extra line when one selects whole lines.
 
